# halalmarket

./: .dockerignore  .gitignore  README.md  docker-compose.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  Makefile  Makefile.docker  entrypoint.sh  main.py  pyproject.toml  requirements.txt
apps/backend/app/config/: celery.py  environment.py  health.py  settings.py  urls.py
apps/backend/app/modules/admin_api/: apps.py  serializers.py  tasks.py  urls.py
apps/backend/app/modules/auth/: serializers.py  tasks.py  urls.py
apps/backend/app/modules/carts/: apps.py  models.py  serializers.py  urls.py
apps/backend/app/modules/categories/: apps.py  models.py  serializers.py  signals.py  urls.py
apps/backend/app/modules/common/: urls.py  views.py
apps/backend/app/modules/favorites/: apps.py  models.py  serializers.py  urls.py
apps/backend/app/modules/notifications/: apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py
apps/backend/app/modules/orders/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py
apps/backend/app/modules/payment/: models.py
apps/backend/app/modules/products/: models.py  search_service.py  serializers.py  signals.py  tasks.py  urls.py
apps/backend/app/modules/promotions/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py
apps/backend/app/modules/sellers/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py
apps/backend/app/modules/users/: apps.py  authentication.py  models.py  permissions.py  serializers.py  signals.py  urls.py
apps/backend/scripts/: entrypoint.sh
(+604 files in other folders)
